# gtfs-parquet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/gtfs_parquet/: __init__.py  _version.py  constants.py  feed.py  geo.py  parse.py  schema.py  write.py
src/gtfs_parquet/ops/: __init__.py  calendar.py  clean.py  graph.py  network.py  restrict.py  routes.py  stops.py  trips.py
tests/: benchmark.py  benchmark_compression.py  benchmark_ops.py  benchmark_ops_memory.py  precompute_gk.py  test_equivalence.py  test_graph.py  test_parse.py
