[project]
name = "gtfs-parquet"
dynamic = ["version"]
description = "Parse GTFS feeds to/from Parquet via Polars — fast, compact, typed."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Gaspard Merten", email = "gaspard.mp.work@gmail.com" },
]
keywords = ["gtfs", "parquet", "polars", "transit", "transport"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/GaspardMerten/gtfs-parquet"
Repository = "https://github.com/GaspardMerten/gtfs-parquet"
Issues = "https://github.com/GaspardMerten/gtfs-parquet/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/gtfs_parquet/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gtfs_parquet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
